apps/public/budget.rohrbom.be/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actualbudget
  namespace: svc-actualbudget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "2592000"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-public
  rules:
    - host: budget.rohrbom.be
      http:
        paths:
          - path: /privacy
            pathType: Exact
            backend:
              service:
                name: actualbudget-legal-pages
                port:
                  number: 80
          - path: /terms
            pathType: Exact
            backend:
              service:
                name: actualbudget-legal-pages
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actualbudget
                port:
                  number: 80
  tls:
    - hosts:
        - budget.rohrbom.be
      secretName: actualbudget-tls
