apps/public/budget.rohrbom.be/netpol-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-actualbudget-from-public-ingress
  namespace: svc-actualbudget
spec:
  podSelector:
    matchLabels:
      app: actualbudget
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-30
      ports:
        - protocol: TCP
          port: 5006
